_less/stmwww.less
@import "../_bootstrap/less/bootstrap.less";
@import "../_bootstrap/less/responsive.less";

@grayedOut: #bbb;
@beige: #F5F1DE;

@sansFontFamily:  "Helvetica Neue", Helvetica, Arial, sans-serif;
@serifFontFamily: 'Goudy Bookletter 1911', Georgia, "Times New Roman", Times, serif;
@baseFontFamily:  @serifFontFamily;
@baseFontSize:    16px;

div.center, 
iframe.center {
    margin: auto;
}

:link.external { 
    background-image: url(/img/external.png);
    background-repeat: no-repeat;
    background-position: 100% 50%;
    display: inline-block;
    margin-right: 6px;
    padding-right: 24px;
}

footer.align-right {
    float: none;
    text-align: right;
}

.centered {
    text-align: center;
}

.dl-horizontal.commentaries,
.dl-horizontal.calendar {
    h2 { }
    ul { margin-left: 0;
         list-style: none;
         border-top: 1px solid @tableBorder; 
       }

    a.pdf:after { 
        font-size: 65%;
        vertical-align: super;
        content: "\2009[\2009PDF\2009]"; 
        color: @grayLight;
    }
}

.sidebar-nav {
    background-color: @beige;
}

/* Large desktop */
@media (min-width: 1200px) { 
    .sidebar-fixed { position: fixed; } 
    .navbar { display: none; }
    .dl-horizontal.dl-wide {
        dt { width: 15em; }
        dd { margin-left: 16.5em; }
    }
}

/* Default */
@media (min-width: 980px) and (max-width: 1199px) {
    .sidebar-fixed { position: fixed; } 
    .navbar { display: none; }
    .dl-horizontal.dl-wide {
        dt { width: 15em; }
        dd { margin-left: 16.5em; }
    }
}
 
/* Portrait tablet to landscape and desktop */
@media (min-width: 768px) and (max-width: 979px) {
    .sidebar-fixed { position: fixed; width: 174px;} 
    .navbar { display: none; }
    .dl-horizontal.dl-wide {
        dt { width: 15em; }
        dd { margin-left: 16.5em; }
    }
}
 
/* Landscape phone to portrait tablet */
@media (max-width: 767px) { 
}
 
/* Landscape phones and down */
@media (max-width: 480px) { 
}

